feat: compare endpoint schema response & optimization
