# controllers/projects_controller.go
@@ -9,7 +9,6 @@ import (
 	"github.com/Tsarbomba69-com/mammoth.server/repositories"
 	"github.com/Tsarbomba69-com/mammoth.server/schemas"
 	"github.com/Tsarbomba69-com/mammoth.server/services"
-	"github.com/Tsarbomba69-com/mammoth.server/utils"
 	"github.com/gin-gonic/gin"
 )
 
@@ -76,60 +75,51 @@ func GetProjects(c *gin.Context) {
 	})
 }
 
-// MigrateProject initiates database migration for a specific project
-// @Summary Migrate database
-// @Description Initiates a migration from the source database to the target database for the specified project
+// Compare initiates database schema comparison for a specific project
+// @Summary Compare database
+// @Description initiates schema comparison from the source database to the target database for the specified project
 // @Tags projects
 // @Accept  json
 // @Produce  json
 // @Param   id   path      string  true  "Project ID"
-// @Success 200  {object}  map[string]any
+// @Success 200  {object}  schemas.SchemaComparisonResponse
 // @Failure 400  {object}  map[string]any
 // @Failure 404  {object}  map[string]any
 // @Failure 500  {object}  map[string]any
-// @Router  /api/v1/projects/{id}/migrate [post]
-func MigrateProject(c *gin.Context) {
+// @Router  /api/v1/projects/{id}/compare [post]
+func Compare(c *gin.Context) {
 	projectID := c.Param("id")
 	var project models.Project
 	var sourceSchema []services.TableSchema
 	var targetSchema []services.TableSchema
-	var sw = utils.NewStopwatch()
 
 	if err := repositories.Context.Preload("Source").Preload("Target").First(&project, projectID).Error; err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Project not found"})
 		return
 	}
 
-	sw.Start("Connect Project")
 	var source, target, err = project.ConnectForProject()
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to connect to databases"})
 		return
 	}
 
-	sw.Stop("Connect Project")
-	sw.Start("Dump Source Schema")
 	sourceSchema, err = services.DumpSchemaAST(source)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to dump schema"})
 		return
 	}
 
-	sw.Stop("Dump Source Schema")
-	sw.Start("Dump Target Schema")
 	targetSchema, err = services.DumpSchemaAST(target)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to dump schema"})
 		return
 	}
 
-	sw.Stop("Dump Target Schema")
-	sw.Start("Compare Schemas")
 	diff := services.CompareSchemas(sourceSchema, targetSchema)
-	sw.Stop("Compare Schemas")
-	sw.Start("Generate Migration Script")
 	script := services.Generate(diff)
-	sw.Stop("Generate Migration Script")
-	sw.PrintTable()
-	c.JSON(http.StatusOK, gin.H{"up": script.Up, "down": script.Down})
+	c.JSON(http.StatusOK, schemas.SchemaComparisonResponse{
+		Differences:     diff,
+		MigrationScript: script,
+	})
 }
